--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,12 @@ h3 {
 }
 
 .container {
+    width: 80%;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.container-nav {
     width: 90%;
     margin: 0 auto;
     overflow: hidden;
@@ -172,7 +178,6 @@ h3 {
     background-position: center;
     min-height: 100vh;
     width: 100%;
-    z-index: -10; 
 }
 
 .home-title {
@@ -307,7 +312,6 @@ h3 {
     background-attachment: fixed;
     min-height: 100vh;
     width: 100%;
-    z-index: -10; 
 }
 
 .explore-title h1 {
@@ -478,11 +482,10 @@ hr.socket {
 
     .description-section p {
         font-size: 14px;
-        padding: 0 8px;
     }
 
     .explore-title h1 {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
 
     .features-section img {
