--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
+    scroll-behavior: smooth;
 }
 
 h1,
@@ -351,7 +352,7 @@ h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 55%;
 }
 
 .buy-section .button-buy {
